fix alignment issus with X-button

--- a/src/Assets/Styles/Views/Site/CreateQuestion.scss
+++ b/src/Assets/Styles/Views/Site/CreateQuestion.scss
@@ -25,7 +25,9 @@
     margin: 1em;
   }
 }
-
+.align-bottom{
+  align-self: flex-end;
+}
 .margin-tb-1 {
   margin: 1em 0;
 }
